<package>
   <name>joint_converter</name>


   <version>0.2.0</version>
   <description>
      URDF model of ADA. ADA, the Assistive Dexterous Arm, was designed
      and built by the Personal Robotics Laboratory at Carnegie Mellon
      University.
   </description>
   <author>Tekin Mericli</author>
   <maintainer email="snikolai@andrew.cmu.edu">Stefanos Nikolaidis</maintainer>
   <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>kdl_parser</build_depend>
    <build_depend>rosbag</build_depend>
    <run_depend>rosbag</run_depend>
    <run_depend>kdl_parser</run_depend>
</package>
